# Optimization-of-the-Emergency-Department

./: .dockerignore  Dockerfile  README.md  dvc.yaml  notebook.ipynb  pyproject.toml  requirements.txt  tatus
app/: backend.py  streamlit_app.py
data/processed/: .gitignore  patient_journey_grouped.csv
data/raw/: .gitignore  EventLog.csv.dvc
reports/: waiting_transitions.csv
src/: cli.py  config.py  dashboard.py  evaluation.py  features.py  ingest_data.py  pipeline_architecture.py  process_discovery.py  training.py
src/utils/: io.py  logging.py
tests/: test_features.py  test_pipeline_architecture.py  test_training.py
